--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on:
     workflow_dispatch:
     push:
-      branches: [ master ]
+      branches: [ main ]
 jobs:
     my-job:
         runs-on: self-hosted
