--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,6 @@ jobs:
         runs-on: self-hosted
         steps:
             - name: my-step
-              run: echo "Hello World!"
+              run: 
+                pyinstaller .\Main.spec --noconfirm
+                iscc .\innosetup.iss
