ls and pwd test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,5 @@ jobs:
         steps:
             - name: my-step
               run: | 
-                pyinstaller .\Main.spec --noconfirm
-                iscc .\innosetup.iss
+                ls
+                pwd
