--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
     my-job:
         runs-on: self-hosted
         steps:
+            - uses: actions/checkout@v4
             - name: my-step
               run: | 
                 ls
