--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,7 @@ jobs:
         runs-on: self-hosted
         steps:
             - uses: actions/checkout@v4
-            - name: my-step
-              run: | 
-                pyinstaller .\Main.spec --noconfirm
-                iscc .\innosetup.iss
-              
+            - name: make exe
+              run: pyinstaller .\Main.spec --noconfirm
+            - name: make setup
+              run: iscc .\innosetup.iss
