--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
     my-job:
         runs-on: self-hosted
         steps:
+            - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c
             - uses: actions/checkout@v4
             - uses: getsentry/action-setup-venv@v2.1.0
               id: venv
