--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
             - uses: actions/checkout@v4
             - name: create venv and install dependencies
               run: |
-                if (-Not (Test-Path "venv")) {python -m venv venv;Write-Output "Virtual environment created."} else {Write-Output "Virtual environment already exists."}
+                if (-Not (Test-Path "../../../venv")) {python -m venv venv;Write-Output "Virtual environment created."} else {mv ../../../venv . ;Write-Output "Virtual environment already exists."}
                 ./venv/Scripts/activate
                 pip install -r .\requirements.txt
             - name: test enviroment
@@ -24,3 +24,6 @@ jobs:
                 pyinstaller .\Main.spec --noconfirm
             - name: make setup
               run: iscc .\innosetup.iss
+            - name: post-action backup venv
+              if: always()
+              run: mv venv ../../..
